--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -12,18 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "47719b68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = ollama.generate(model = \"gemma3:4b\", prompt = \"What is the capital of Nepal?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3e4111db",
    "metadata": {},
    "outputs": [
     {
@@ -32,14 +22,17 @@
      "text": [
       "The capital of Nepal is **Kathmandu**. \n",
       "\n",
-      "It’s a fascinating city with a rich history and culture! \n",
+      "It's a bustling city located in the Kathmandu Valley. 😊 \n",
       "\n",
-      "Do you want to know anything more about Kathmandu or Nepal in general?\n"
+      "Do you want to know anything else about Nepal or Kathmandu?"
      ]
     }
    ],
    "source": [
-    "print(response.response)"
+    "response = ollama.generate(model = \"gemma3:4b\", prompt = \"What is the capital of Nepal?\", stream= True)\n",
+    "\n",
+    "for text in response:\n",
+    "    print(text['response'], end=\"\")"
    ]
   },
   {
