3: modle file learned

--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "442d6ff5",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "78359cee",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "5facb2ad",
    "metadata": {},
    "outputs": [
@@ -434,6 +434,178 @@
     "## 3 Then we call the llm with the prompt and schema (llm uses it's own knowledge and then sees if any tools can answer the question based on description)\n",
     "## 4 llm return the json the object with the funciton name and the parameters to call the function\n",
     "## 5 manuely now the funciton is called because the llm can't run the function on it's own"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2750a123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invetory_db = {\n",
+    "    \"laptop\": {\"stock\": 10, \"price\": 1000},\n",
+    "    \"phone\": {\"stock\": 20, \"price\": 500},\n",
+    "    \"keyboard\": {\"stock\": 15, \"price\": 100}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "af588699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tool 1\n",
+    "def check_inventory(product_name):\n",
+    "    prodct_name  = product_name.lower()\n",
+    "\n",
+    "    if product_name in invetory_db:\n",
+    "        return invetory_db[product_name]\n",
+    "\n",
+    "    return {\"stock\": 0, \"price\": 0}\n",
+    "\n",
+    "#tool 2\n",
+    "\n",
+    "\n",
+    "def check_loyalty(base_price, year_as_customer):\n",
+    "    discount = min(year_as_customer * 0.05, 0.25)  # 5% discount per year, up to 25%\n",
+    "    final_price = base_price * (1 - discount)\n",
+    "    return round(final_price, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ea07c4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "availabe_functions ={\n",
+    "    'check_inventory': check_inventory,\n",
+    "    'check_loyalty': check_loyalty\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3838f02d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\":{\n",
+    "            \"name\": \"check_inventory\",\n",
+    "            \"description\": \"Check the inventory and price of a product.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"type\": \"string\",\n",
+    "\n",
+    "            },\n",
+    "                \"required\": [\"product_name\"]\n",
+    "        }\n",
+    "    },\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\":{\n",
+    "            \"name\": \"check_loyalty\",\n",
+    "            \"description\": \"Calculate the final price after applying loyalty discount.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"base_price\": {\"type\": \"number\"},\n",
+    "                    \"year_as_customer\": {\"type\": \"number\"}\n",
+    "                },\n",
+    "                \"required\": [\"base_price\", \"year_as_customer\"]\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a6518c85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': 'function',\n",
+       "  'function': {'name': 'check_loyalty',\n",
+       "   'description': 'Calculate the final price after applying loyalty discount.',\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'base_price': {'type': 'number'},\n",
+       "     'year_as_customer': {'type': 'number'}},\n",
+       "    'required': ['base_price', 'year_as_customer']}}}]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "02401187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = [ {\"role\": \"user\",  \"content\": \"I want to buy a laptop, how many are in the stock\"}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ab673dce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response1 = ollama.chat(model = \"phi4-mini:latest\", messages = message, tools = tools, stream= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b179bd21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chunk in response1:\n",
+    "    print(chunk['message'], end='', flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "8c840be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model file is a file containing the model weights and configuration, which is used to load the model into memory and make it ready for inference.\n",
+    "# cna be model instruction, or the output it should produce and can have the parameter specificaitons etc\n",
+    "# this will not tamper the main model but give us the model that uses the model file to make it better "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ce1e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this will add a layer of instruciton on the top of the llm and the model will behave based on the insstruction"
    ]
   }
  ],
