--- a/ollama_langchain.ipynb
+++ b/ollama_langchain.ipynb
@@ -93,6 +93,18 @@
    "source": [
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4313e218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ollama cloud a cloud based ollama platform that allows to run the ollama powerful model that can't be run locally.\n",
+    "#a tier is free but can't be used to run a production level program, only small chat and other things.\n",
+    "#only cloud capabiility model can be runned in the ollama cloud."
+   ]
   }
  ],
  "metadata": {
